peofile pic selection

--- a/app/src/main/res/layout/activity_profile_pic.xml
+++ b/app/src/main/res/layout/activity_profile_pic.xml
@@ -13,23 +13,25 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/profile" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="161dp"
-        android:layout_height="235dp"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/profile_image"
+        android:layout_width="205dp"
+        android:layout_height="253dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.545"
+        app:layout_constraintHorizontal_bias="0.548"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.165"
-        app:srcCompat="@drawable/user" />
+        app:layout_constraintVertical_bias="0.182"
+        app:srcCompat="@drawable/user">
+
+    </de.hdodenhof.circleimageview.CircleImageView>
 
     <Button
         android:id="@+id/choosePic"
@@ -41,15 +43,15 @@
         android:textColor="#fff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.529"
+        app:layout_constraintHorizontal_bias="0.556"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.707" />
+        app:layout_constraintVertical_bias="0.775" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="80dp"
-        android:layout_height="72dp"
+        android:layout_width="68dp"
+        android:layout_height="67dp"
         android:background="@drawable/next"
         android:onClick="onNextBtnClick"
         app:layout_constraintBottom_toBottomOf="parent"
