--- a/app/src/main/res/layout/new_tweet.xml
+++ b/app/src/main/res/layout/new_tweet.xml
@@ -14,7 +14,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/muImage"
+                android:id="@+id/myImage"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/user" />
@@ -41,7 +41,7 @@
             android:layout_marginBottom="5dp">
 
             <EditText
-                android:id="@+id/myTweet"
+                android:id="@+id/myTweetText"
                 android:layout_width="fill_parent"
                 android:layout_height="40dp"
                 android:ems="10"
