--- a/app/src/main/res/layout/new_tweet.xml
+++ b/app/src/main/res/layout/new_tweet.xml
@@ -51,7 +51,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/twitterbirds"
-                android:layout_marginRight="15dp">
+                android:layout_marginRight="15dp"
+                android:id="@+id/myAttachment">
             </ImageView>
         </LinearLayout>
 
