--- a/app/src/main/res/drawable/background_add_new.xml
+++ b/app/src/main/res/drawable/background_add_new.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#33b5e5"></solid>
+
+    <solid android:color="#D3D3D3"></solid>
     <corners android:bottomRightRadius="40dp"></corners>
     <padding android:top="5dp"
         android:right="5dp"
