--- a/app/src/main/res/layout/tweet.xml
+++ b/app/src/main/res/layout/tweet.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingTop="10dp"
+        android:background="#fff"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -11,7 +21,8 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginLeft="8dp">
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/userImage"
                 android:layout_width="30dp"
@@ -28,7 +39,7 @@
                 android:layout_gravity="center"
                 android:layout_marginLeft="10dp"
                 android:textColor="#fff"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
@@ -45,6 +56,7 @@
                 android:layout_height="40dp"
                 android:ems="10"
                 android:gravity="start|top"
+                android:paddingLeft="10dp"
                 />
             <ImageView
                 android:layout_width="match_parent"
@@ -53,7 +65,25 @@
                 android:layout_marginRight="15dp"
                 android:id="@+id/userAttachment">
             </ImageView>
+
         </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/likeImage"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/heart"
+
+                />
+        </RelativeLayout>
+
+    </LinearLayout>
 
     </LinearLayout>
 </LinearLayout>
